version 0.2.7
-fixed bug match_restrictions. Would fail in some cases of explicitly named rows in 
 data frame. (Thanks to Patrick Driessens for reporting).

version 0.2.6
- 'match_restrictions' now warns in the case of strict inequalities.
- Fix: warning message on non convergence did not match the reason.


version 0.2.5
- Documentation format update by CRAN request.

version 0.2.4
- switched to 'tinytest' testing framework
- documentation update (issue #2)
- added CITATION file

version 0.2.3
- bugfix: match_restrictions would try and alter the wrong variables in cases where
  variable order in the rule set was different from variable order in the data.

version 0.2.1
- Pakcage now imports from 'validate'
- Imported package 'editrules' is now suggested
- New function 'match_constraints' Works with 'validate::validator' objects. 
- New function 'tag_missing' records missing value locatiions.
- New function 'tagged_values' retrieves tagged value locations.
- New function 'remove_tag' removes tagged value locations
- Function 'adjust' is now deprecated. (see 'match_constraints')
- Function 'sparseConstraints' is now deprecated (see the 'lintools' package)
- Updated native routine registration as now required by CRAN

version 0.1.8
- updated for compliance to new CRAN policies

version 0.1.7
- solved issues with vignette building on CRAN side

version 0.1.6
- bugfix in adjustRecords: weights were ignored (thanks to Daan Zult).
- several updates on unit tests.

version 0.1.4
- Vignette now built using weave engine specification (allowed since R3.0).

version 0.1.3
- Removed vignette dependence on inconsolata.sty which is now unavailable from CTAN (Thanks to Brian Ripley)

version 0.1.2
- Cleaned code after compilation warnings in candidate compiler for OSX (Thanks to Brian Ripley)
- bugfix in print method for object of class 'adjustedRecords'

version 0.1.1
- Update in vignette due to knitr upgrade (thanks to Yihui Xi).