@@ -11,7 +11,7 @@ Description: Minimally adjust the values of numerical records in a data.frame, s
     The core algorithms have recently been moved to the 'lintools' package,
     refer to 'lintools' for a more basic interface and access to a version
     of the algorithm that works with sparse matrices.
-Version: 0.2.6.1
+Version: 0.2.6.2
 Depends: R (>= 2.13.0)
 Imports: graphics, stats, validate, lintools
 Suggests: editrules, tinytest
