@@ -38,6 +38,7 @@ match_restrictions <- function(dat, restrictions
       , ...){
   stopifnot(inherits(dat,"data.frame"))
   stopifnot(inherits(restrictions,"validator"))
+
   if (is.null(adjust)){
     adjust <- tagged_values(dat)
     if (is.null(adjust))
@@ -91,7 +92,7 @@ Strict inequalities: %s",nm)
     adj <- adjust[i,]
     if (!any(adj)) next
     
-    x <- M[,i]
+    x <- M[,i,drop=TRUE]
     names(x) <- rownames(M)
 
     constr <- lintools::subst_value(L$A, L$b, variables=!adj, values=x[!adj])
@@ -115,7 +116,9 @@ Strict inequalities: %s",nm)
     }
     M[names(constr$x),i] <- out$x
   }
-  dat[in_res] <- t(M)
+  # as.numeric, to avoid edge case where M is 1x1 and a matrix is stored
+  # in a column (when dat has 1 row).
+  dat[in_res] <- as.numeric(t(M)) 
   if (remove_tag) remove_tag(dat) else dat
 }
 
